--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,21 @@
     "minimum-stability": "beta",
     "require": {
         "php": "^7.0.8",
-        "symfony/flex": "^1.0",
+        "sensiolabs/security-checker": "^4.1",
         "symfony/console": "^4.0",
+        "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/monolog-bundle": "^3.1",
+        "symfony/twig-bundle": "^4.0@beta",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0"
+        "phpunit/phpunit": "^6.4",
+        "symfony/debug-bundle": "^4.0@beta",
+        "symfony/dotenv": "^4.0",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/web-server-bundle": "^4.0@beta"
     },
     "config": {
         "preferred-install": {
@@ -32,7 +39,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
