Add /status route and phpunit/phpcs
No phpstan for now as the latest released version does not support the
symfony 4 console component

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 home:
-   path: /
-   defaults: { _controller: 'App\Controller\HomeController' }
+    path: /
+    defaults: { _controller: 'App\Controller\HomeController' }
+
+status:
+    path: /status
+    defaults: { _controller: 'App\Controller\StatusController' }
