--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/build/
 
 ###> symfony/framework-bundle ###
 .env
@@ -9,3 +10,7 @@
 ###> symfony/web-server-bundle ###
 .web-server-pid
 ###< symfony/web-server-bundle ###
+
+###> symfony/phpunit-bridge ###
+/phpunit.xml
+###< symfony/phpunit-bridge ###
