--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,13 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
+        "escapestudios/symfony2-coding-standard": "^3.0",
         "phpunit/phpunit": "^6.4",
+        "squizlabs/php_codesniffer": "^3.1",
+        "symfony/browser-kit": "^4.0@beta",
         "symfony/debug-bundle": "^4.0@beta",
         "symfony/dotenv": "^4.0",
+        "symfony/phpunit-bridge": "^4.0@beta",
         "symfony/profiler-pack": "^1.0",
         "symfony/web-server-bundle": "^4.0@beta"
     },
@@ -33,7 +37,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "Tests\\App\\": "tests/"
         }
     },
     "scripts": {
