--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,3 +26,12 @@ services:
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
+
+    RMP\Translate\TranslateFactory:
+        arguments:
+            - fallback_locale: 'en_GB'
+              cachepath: '%kernel.cache_dir%/translations'
+              domains: ['blogs']
+              default_domain: 'blogs'
+              debug: '%kernel.debug%'
+              basepath: '%kernel.project_dir%/resources/translations'
