--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
     },
     "require-dev": {
         "escapestudios/symfony2-coding-standard": "^3.0",
+        "phpstan/phpstan": "dev-master@dev",
+        "phpstan/phpstan-phpunit": "dev-master@dev",
         "phpunit/phpunit": "^6.4",
         "squizlabs/php_codesniffer": "^3.1",
         "symfony/browser-kit": "^4.0@beta",
