--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,15 @@
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "beta",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:bbc/rmp-translate.git"
+        }
+    ],
     "require": {
         "php": "^7.0.8",
+        "bbc-rmp/translate": "^1.8.7",
         "sensiolabs/security-checker": "^4.1",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
