Add Translation Config  (#4)
Adding translations config

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,4 +34,4 @@ services:
               domains: ['blogs']
               default_domain: 'blogs'
               debug: '%kernel.debug%'
-              basepath: '%kernel.project_dir%/resources/translations'
+              basepath: '%kernel.project_dir%/translations'
