--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,11 @@
-home:
-    path: /
-    defaults: { _controller: 'App\Controller\HomeController' }
-
 status:
     path: /status
-    defaults: { _controller: 'App\Controller\StatusController' }
+    defaults: { _controller: App\Controller\StatusController }
+
+root:
+    path: /
+    defaults: { _controller: FrameworkBundle:Redirect:redirect, route: home, permanent: true }
+
+home:
+    path: /blogs
+    defaults: { _controller: App\Controller\HomeController }
