--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,11 +1,13 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    app.default_locale: 'en_GB'
-    app.orbit_client.class: BBC\BrandingClient\OrbitClient
+    app.api_endpoint: 'https://api.test.bbc.co.uk/isite2-content-reader'
     app.branding_client.class: BBC\BrandingClient\BrandingClient
+    app.default_locale: 'en_GB'
     app.feed_env.orbit: 'live'
     app.feed_env.branding: 'live'
+    app.orbit_client.class: BBC\BrandingClient\OrbitClient
+    cache_provider: cache.null_provider
     cosmos_component_release: '%env(APP_RELEASE_NUMBER)%'
 
 services:
@@ -33,6 +35,20 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    App\BlogsService\Infrastructure\Cache\Cache:
+        arguments: ['@cache.blogs', 'app.%cosmos_component_release%']
+
+    App\BlogsService\Infrastructure\Cache\CacheInterface:
+        alias: App\BlogsService\Infrastructure\Cache\Cache
+
+    App\BlogsService\Service\BlogService:
+        factory: ['@App\BlogsService\Service\ServiceFactory', 'getBlogService']
+
+    App\BlogsService\Service\ServiceFactory:
+        arguments:
+            - '%app.api_endpoint%'
+            - '@csa_guzzle.client.default'
+
     BBC\BrandingClient\BrandingClient:
         class: "%app.branding_client.class%"
         arguments:
@@ -50,6 +66,12 @@ services:
               cacheKeyPrefix: 'blogs-frontend.%cosmos_component_release%.orbit'
               mustache: { cache: '%kernel.cache_dir%/mustache' }
 
+    app.blog_repository:
+        class: App\BlogsService\Repository\BlogRepository
+        arguments:
+            - '%app.api_endpoint%'
+            - '@csa_guzzle.client.default'
+
     cache.default_redis_provider:
             factory: 'App\Redis\RedisClusterFactory:createRedisCluster'
             class: App\Redis\RedisClusterFactory
@@ -58,6 +80,9 @@ services:
                 - '@logger'
             tags:
                 - { name: 'monolog.logger', channel: 'cache' }
+
+    cache.null_provider:
+        class: Symfony\Component\Cache\Adapter\NullAdapter
 
     ### Translations
 
