--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-rev": "^8.1.0",
+    "gulp-rev-css-url": "^0.1.0",
+    "gulp-rev-delete-original": "^0.2.3",
     "gulp-sass": "^3.1.0",
     "gulp-sass-error": "^1.0.5",
+    "gulp-sourcemaps": "^2.6.1",
+    "run-sequence": "^2.2.0",
     "sass-lint": "^1.12.1",
     "sass-mq": "^3.3.2"
   },
