--- a/config/services.yaml
+++ b/config/services.yaml
@@ -61,8 +61,8 @@ services:
     RMP\Translate\TranslateFactory:
         arguments:
             - fallback_locale: 'en_GB'
-              cachepath: '%kernel.cache_dir%/translations'
+              cachepath: '%kernel.cache_dir%/config/translations'
               domains: ['blogs']
               default_domain: 'blogs'
               debug: '%kernel.debug%'
-              basepath: '%kernel.project_dir%/translations'
+              basepath: '%kernel.project_dir%/config/translations'
