--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,7 @@
 # Copy this file to .env file for development, create environment variables when deploying to production
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
+APP_REDIS_ENDPOINT=sandbox.bbc.co.uk:6379
 APP_RELEASE_NUMBER=0
 
 ###> symfony/framework-bundle ###
