--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
         "php": "^7.0.8",
+        "ext-redis": "*",
         "bbc-rmp/translate": "^1.8.7",
         "bbc/branding-client": "^2.3",
         "csa/guzzle-bundle": "dev-master@dev",
