--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,6 +13,8 @@
         <env name="APP_ENV" value="test" />
         <env name="APP_DEBUG" value="1" />
         <env name="APP_SECRET" value="s$cretf0rt3st" />
+        <env name="APP_REDIS_ENDPOINT" value="" />
+        <env name="APP_RELEASE_NUMBER" value="0" />
         <!-- define your env variables for the test env here -->
     </php>
 
