--- a/config/packages/test/framework.yaml
+++ b/config/packages/test/framework.yaml
@@ -2,3 +2,8 @@ framework:
     test: ~
     #session:
     #    storage_id: session.storage.mock_file
+
+    cache:
+        pools:
+            cache.blogs:
+                provider: cache.null_provider
