--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -1,7 +1,10 @@
 parameters:
-    blogs.branding_client.class: BBC\BrandingClient\BrandingStubClient
-    blogs.orbit_client.class: BBC\BrandingClient\OrbitStubClient
+    app.branding_client.class: BBC\BrandingClient\BrandingStubClient
+    app.orbit_client.class: BBC\BrandingClient\OrbitStubClient
 
 services:
+    App\BlogsService\Service\BlogService:
+        public: true
+
     cache.null_provider:
         class: Symfony\Component\Cache\Adapter\NullAdapter
