--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php": "^7.0.8",
+        "php": "^7.1.0",
         "ext-redis": "*",
         "bbc-rmp/translate": "^1.8.7",
         "bbc/branding-client": "^2.3",
@@ -35,6 +35,7 @@
         "phpunit/phpunit": "^6.4",
         "squizlabs/php_codesniffer": "^3.1",
         "symfony/browser-kit": "^4.0@beta",
+        "symfony/css-selector": "^4.0@beta",
         "symfony/debug-bundle": "^4.0@beta",
         "symfony/dotenv": "^4.0",
         "symfony/phpunit-bridge": "^4.0@beta",
