--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,7 +26,7 @@ services:
         resource: '../src/*'
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
-        exclude: '../src/{Entity,Migrations,Repository,Tests}'
+        exclude: '../src/{Entity,Migrations,Repository,Tests,BlogsService/Domain}'
 
     # controllers are imported separately to make sure they
     # have the tag that allows actions to type-hint services
@@ -42,6 +42,9 @@ services:
 
     App\BlogsService\Service\BlogService:
         factory: ['@App\BlogsService\Service\ServiceFactory', 'getBlogService']
+
+    App\BlogsService\Service\PostService:
+        factory: ['@App\BlogsService\Service\ServiceFactory', 'getPostService']
 
     App\BlogsService\Service\ServiceFactory:
         arguments:
