--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -12,5 +12,5 @@ home:
 
 blog:
     path: /blogs/{blogId}
-    defaults: { _controller: App\Controller\BlogIndexController }
+    defaults: { _controller: App\Controller\BlogShowController }
     requirements: { blogId: '[a-z0-9]+' }
