--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,4 +1,6 @@
 twig:
-    paths: ['%kernel.project_dir%/templates']
+    paths:
+        '%kernel.project_dir%/templates': ''
+        '%kernel.project_dir%/src/Ds': 'Ds'
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
