Move sass into the Design System folders
ATM I've dumped everything into Core, this shall be draggd out into
particular Atom/Molecule/Organism folders as time goes on.

Also move /resources/assets/sass to /resources/sass to simplify the
folder structure slightly.

--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -1,9 +1,11 @@
 options:
     formatter: stylish
 files:
-    include: ['resources/assets/sass/*.scss', 'resources/assets/sass/**/*.scss']
+    include: ['resources/sass/*.scss', 'src/Ds/**/*.scss']
     ignore:
-        - 'resources/assets/sass/vendor/*'
+        - 'src/Ds*/Core/Vendor/*'
+        # Ignore as there sass-lint thinks this file is invalid but it isn't
+        - 'src/Ds2013/Core/Helpers/_widths.scss'
 rules:
     # Name Formats
     function-name-format: [2, {convention: hyphenatedlowercase}]
