--- a/config/services_prod_int.yaml
+++ b/config/services_prod_int.yaml
@@ -1,3 +1,4 @@
 parameters:
-    app.feed_env.orbit: 'int'
-    app.feed_env.branding: 'int'
+    app.api_endpoint: 'https://api.test.bbc.co.uk/isite2-content-reader'
+    app.feed_env.orbit: 'test'
+    app.feed_env.branding: 'test'
