Blog index and post page scaffolding (#26)
Adding scaffolding for blog index page and post page

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -12,4 +12,10 @@ home:
 
 blog:
     path: /blogs/{blogId}
+    defaults: { _controller: App\Controller\BlogShowController }
+    requirements: { blogId: '[a-z0-9]+' }
+
+post:
+    path: /blogs/{blogId}/entries/{guid}
+    defaults: { _controller: App\Controller\PostShowController }
     requirements: { blogId: '[a-z0-9]+' }
