--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,7 +1,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    app.api_endpoint: 'https://api.test.bbc.co.uk/isite2-content-reader'
+    app.api_endpoint: 'https://api.bbc.co.uk/isite2-content-reader'
     app.branding_client.class: BBC\BrandingClient\BrandingClient
     app.default_locale: 'en_GB'
     app.feed_env.orbit: 'live'
@@ -26,7 +26,7 @@ services:
         resource: '../src/*'
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
-        exclude: '../src/{Entity,Migrations,Repository,Tests}'
+        exclude: '../src/{Entity,Migrations,Repository,Tests,BlogsService/Domain}'
 
     # controllers are imported separately to make sure they
     # have the tag that allows actions to type-hint services
@@ -42,6 +42,9 @@ services:
 
     App\BlogsService\Service\BlogService:
         factory: ['@App\BlogsService\Service\ServiceFactory', 'getBlogService']
+
+    App\BlogsService\Service\PostService:
+        factory: ['@App\BlogsService\Service\ServiceFactory', 'getPostService']
 
     App\BlogsService\Service\ServiceFactory:
         arguments:
