--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,7 +1,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    app.api_endpoint: 'https://api.bbc.co.uk/isite2-content-reader'
+    app.api_endpoint: 'https://api.live.bbc.co.uk/isite2-content-reader'
     app.branding_client.class: BBC\BrandingClient\BrandingClient
     app.default_locale: 'en_GB'
     app.feed_env.orbit: 'live'
