Adding Tag page scaffolding

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -26,4 +26,5 @@ tag_list:
 
 tag:
     path: /blogs/{blogId}/tags/{tagId}
+    defaults: { _controller: App\Controller\TagShowController }
     requirements: { blogId: '[a-z0-9]+', tagId: '[A-Za-z0-9-]+'}
