--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
         {
             "type": "vcs",
             "url": "git@github.com:bbc/rmp-translate.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:bbc/gel-iconography-assets.git"
         }
     ],
     "require": {
@@ -17,6 +21,7 @@
         "ext-redis": "*",
         "bbc-rmp/translate": "^1.8.7",
         "bbc/branding-client": "^2.3",
+        "bbc/gel-iconography-assets": "^1.2",
         "csa/guzzle-bundle": "dev-master@dev",
         "sensiolabs/security-checker": "^4.1",
         "symfony/asset": "^4.0@beta",
@@ -66,7 +71,8 @@
             "security-checker security:check": "script"
         },
         "post-install-cmd": [
-            "@auto-scripts"
+            "@auto-scripts",
+            "bin/update-gelicons.php"
         ],
         "post-update-cmd": [
             "@auto-scripts"
