--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -36,3 +36,11 @@ feed_atom:
 feed_rss:
     path: /blogs/{blogId}/rss
     requirements: { blogId: '[a-z0-9]+', tagId: '[A-Za-z0-9-]+'}
+
+feed_atom_tags:
+    path: /blogs/{blogId}/tags/{tagId}/atom
+    requirements: { blogId: '[a-z0-9]+', tagId: '[A-Za-z0-9-]+'}
+
+feed_rss_tags:
+    path: /blogs/{blogId}/tags/{tagId}/rss
+    requirements: { blogId: '[a-z0-9]+', tagId: '[A-Za-z0-9-]+'}
