--- a/config/services.yaml
+++ b/config/services.yaml
@@ -57,6 +57,9 @@ services:
             - '%app.api_endpoint%'
             - '@csa_guzzle.client.default'
 
+    App\ValueObject\CosmosInfo:
+        arguments: ['%cosmos_component_release%', '%env(APP_ENV)%']
+
     BBC\BrandingClient\BrandingClient:
         class: "%app.branding_client.class%"
         arguments:
