This might work

--- a/.env.dist
+++ b/.env.dist
@@ -4,6 +4,7 @@
 
 APP_REDIS_ENDPOINT=sandbox.bbc.co.uk:6379
 APP_RELEASE_NUMBER=0
+COSMOS_ENV=sandbox
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
