--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -10,6 +10,10 @@ home:
     path: /blogs
     defaults: { _controller: App\Controller\HomeController }
 
+author_index:
+    path: /blogs/{blogId}/authors
+    requirements: { blogId: '[a-z0-9]+' }
+
 author_index_atoz:
     path: /blogs/{blogId}/authors/a-z
     defaults: { _controller: App\Controller\AuthorIndexAtoZController }
@@ -18,6 +22,11 @@ author_index_atoz:
 author_index_atoz_letter:
     path: /blogs/{blogId}/authors/a-z/{letter}
     requirements: { blogId: '[a-z0-9]+', letter: '[a-z]' }
+
+author_show:
+    path: /blogs/{blogId}/authors/{guid}
+    defaults: { _controller: App\Controller\AuthorShowController }
+    requirements: { blogId: '[a-z0-9]+', guid: '^[a-f\d]{8}(-[a-f\d]{4}){4}[a-f\d]{8}$' }
 
 blog:
     path: /blogs/{blogId}
