Adding SMP embed endpoints per env

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@ parameters:
     app.api_endpoint: 'https://api.live.bbc.co.uk/isite2-content-reader'
     app.branding_client.class: BBC\BrandingClient\BrandingClient
     app.default_locale: 'en_GB'
+    app.endpoint_host: 'https://www.bbc.co.uk'
     app.feed_env.orbit: 'live'
     app.feed_env.branding: 'live'
     app.orbit_client.class: BBC\BrandingClient\OrbitClient
@@ -58,7 +59,7 @@ services:
             - '@csa_guzzle.client.default'
 
     App\ValueObject\CosmosInfo:
-        arguments: ['%cosmos_component_release%', '%env(COSMOS_ENV)%']
+        arguments: ['%cosmos_component_release%', '%env(COSMOS_ENV)%', '%app.endpoint_host%']
 
     BBC\BrandingClient\BrandingClient:
         class: "%app.branding_client.class%"
