--- a/config/services_prod_test.yaml
+++ b/config/services_prod_test.yaml
@@ -1,4 +1,5 @@
 parameters:
     app.api_endpoint: 'https://api.test.bbc.co.uk/isite2-content-reader'
+    app.endpoint_host: 'https://www.test.bbc.co.uk'
     app.feed_env.orbit: 'test'
     app.feed_env.branding: 'test'
