--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "bbc-rmp/translate": "^1.8.7",
         "bbc/branding-client": "^2.3",
         "bbc/gel-iconography-assets": "^1.2",
+        "cakephp/chronos": "^1.1",
         "cakephp/utility": "^3.5",
         "csa/guzzle-bundle": "dev-master@dev",
         "sensiolabs/security-checker": "^4.1",
