--- a/.env.dist
+++ b/.env.dist
@@ -5,6 +5,7 @@
 APP_REDIS_ENDPOINT=sandbox.bbc.co.uk:6379
 APP_RELEASE_NUMBER=0
 COSMOS_ENV=sandbox
+COMMENTS_API_KEY=key
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
