--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,6 +8,7 @@ parameters:
     app.feed_env.orbit: 'live'
     app.feed_env.branding: 'live'
     app.orbit_client.class: BBC\BrandingClient\OrbitClient
+    app.morph.endpoint: 'https://morph.api.bbci.co.uk'
     cosmos_component_release: '%env(APP_RELEASE_NUMBER)%'
 
 services:
@@ -77,6 +78,12 @@ services:
             - env: '%app.feed_env.orbit%'
               cacheKeyPrefix: 'blogs-frontend.%cosmos_component_release%.orbit'
               mustache: { cache: '%kernel.cache_dir%/mustache' }
+
+    BBC\ProgrammesMorphLibrary\MorphClient:
+        arguments:
+            - '@logger'
+            - '@csa_guzzle.client.default'
+            - '%app.morph.endpoint%'
 
     cache.default_redis_provider:
             factory: 'App\Redis\RedisClusterFactory:createRedisCluster'
