updating bake-scripts

--- a/config/services_prod_test.yaml
+++ b/config/services_prod_test.yaml
@@ -4,3 +4,4 @@ parameters:
     app.morph.endpoint: 'https://morph.test.api.bbci.co.uk'
     app.feed_env.orbit: 'test'
     app.feed_env.branding: 'test'
+    app.feed_env.comments: 'test'
