--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,7 @@ parameters:
     app.endpoint_host: 'https://www.bbc.co.uk'
     app.feed_env.orbit: 'live'
     app.feed_env.branding: 'live'
+    app.feed_env.comments: 'live'
     app.orbit_client.class: BBC\BrandingClient\OrbitClient
     app.morph.endpoint: 'https://morph.api.bbci.co.uk'
     cosmos_component_release: '%env(APP_RELEASE_NUMBER)%'
@@ -61,9 +62,9 @@ services:
 
     App\Service\CommentsService:
         arguments:
-            - '%env(COMMENTS_API_KEY)%'
-            - '%env(COSMOS_ENV)%'
             - '@BBC\ProgrammesMorphLibrary\MorphClient'
+            - '%env(COMMENTS_API_KEY)%'
+            - '%app.feed_env.comments%'
 
     App\ValueObject\CosmosInfo:
         arguments: ['%cosmos_component_release%', '%env(COSMOS_ENV)%', '%app.endpoint_host%']
