Make Dates use Chronos

--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -6,5 +6,11 @@ services:
     App\BlogsService\Service\BlogService:
         public: true
 
+    App\BlogsService\Service\PostService:
+        public: true
+
+    App\BlogsService\Service\TagService:
+        public: true
+
     cache.null_provider:
         class: Symfony\Component\Cache\Adapter\NullAdapter
