--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "type": "project",
     "license": "Apache-2.0",
-    "minimum-stability": "beta",
+    "minimum-stability": "stable",
     "repositories": [
         {
             "type": "vcs",
@@ -24,31 +24,31 @@
         "bbc/gel-iconography-assets": "^1.2",
         "cakephp/chronos": "^1.1",
         "cakephp/utility": "^3.5",
-        "csa/guzzle-bundle": "dev-master@dev",
+        "csa/guzzle-bundle": "^3.0",
         "sensiolabs/security-checker": "^4.1",
-        "symfony/asset": "^4.0@beta",
+        "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/twig-bundle": "^4.0@beta",
+        "symfony/twig-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
         "escapestudios/symfony2-coding-standard": "^3.0",
-        "phpstan/phpstan": "dev-master@dev",
-        "phpstan/phpstan-phpunit": "dev-master@dev",
+        "phpstan/phpstan": "^0.9",
+        "phpstan/phpstan-phpunit": "^0.9",
         "phpunit/phpunit": "^6.4",
         "squizlabs/php_codesniffer": "^3.1",
-        "symfony/browser-kit": "^4.0@beta",
-        "symfony/css-selector": "^4.0@beta",
-        "symfony/debug-bundle": "^4.0@beta",
+        "symfony/browser-kit": "^4.0",
+        "symfony/css-selector": "^4.0",
+        "symfony/debug-bundle": "^4.0",
         "symfony/dotenv": "^4.0",
-        "symfony/phpunit-bridge": "^4.0@beta",
+        "symfony/phpunit-bridge": "^4.0",
         "symfony/profiler-pack": "^1.0",
-        "symfony/var-dumper": "^4.0@beta",
-        "symfony/web-server-bundle": "^4.0@beta"
+        "symfony/var-dumper": "^4.0",
+        "symfony/web-server-bundle": "^4.0"
     },
     "config": {
         "preferred-install": {
