--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,15 +1,15 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    app.api_endpoint: 'https://api.live.bbc.co.uk/isite2-content-reader'
+    app.api_endpoint: 'https://api.test.bbc.co.uk/isite2-content-reader'
     app.branding_client.class: BBC\BrandingClient\BrandingClient
     app.default_locale: 'en_GB'
     app.endpoint_host: 'https://www.bbc.co.uk'
     app.feed_env.orbit: 'live'
     app.feed_env.branding: 'live'
-    app.feed_env.comments: 'live'
+    app.feed_env.comments: 'test'
     app.orbit_client.class: BBC\BrandingClient\OrbitClient
-    app.morph.endpoint: 'https://morph.api.bbci.co.uk'
+    app.morph.endpoint: 'https://morph.test.api.bbci.co.uk'
     cosmos_component_release: '%env(APP_RELEASE_NUMBER)%'
 
 services:
