--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "cakephp/chronos": "^1.1",
         "cakephp/utility": "^3.5",
         "csa/guzzle-bundle": "^3.0",
+        "fzaninotto/faker": "^1.7",
         "sensiolabs/security-checker": "^4.1",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
