--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "bbc-rmp/translate": "^1.8.7",
         "bbc/branding-client": "^2.3",
         "bbc/gel-iconography-assets": "^1.2",
-        "bbc/programmes-morph-library": "dev-master@dev",
+        "bbc/programmes-morph-library": "^0.1",
         "cakephp/chronos": "^1.1",
         "cakephp/utility": "^3.5",
         "csa/guzzle-bundle": "^3.0",
