--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ yarn-error.log
 ###> symfony/phpunit-bridge ###
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+###< phpunit/phpunit ###
