--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,6 +17,13 @@
         <env name="APP_RELEASE_NUMBER" value="0" />
         <env name="COSMOS_ENV" value="" />
         <!-- define your env variables for the test env here -->
+
+        <!-- ###+ symfony/framework-bundle ### -->
+        <env name="APP_ENV" value="dev"/>
+        <env name="APP_SECRET" value="44447de766fc12108adb0e87e3e27cf2"/>
+        <!-- env name="TRUSTED_PROXIES" value="127.0.0.1,127.0.0.2" -->
+        <!-- env name="TRUSTED_HOSTS" value="localhost,example.com" -->
+        <!-- ###- symfony/framework-bundle ### -->
     </php>
 
     <!-- This looks kinda odd, but it means that the speedy unit tests run
