--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "gulp-sass": "^3.1.0",
     "gulp-sass-error": "^1.0.5",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-typescript": "^3.2.3",
     "lazysizes": "^4.0.1",
     "run-sequence": "^2.2.0",
     "sass-lint": "^1.12.1",
-    "sass-mq": "^3.3.2"
+    "sass-mq": "^3.3.2",
+    "typescript": "^2.6.2"
   },
   "scripts": {
     "gulp": "gulp default",
