--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,6 @@ yarn-error.log
 ###< symfony/web-server-bundle ###
 
 ###> symfony/phpunit-bridge ###
+.phpunit
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
